--- a/meme/pen.html
+++ b/meme/pen.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <title>Enculator</title>
-        <link rel="stylesheet" href="/CSS/style.css">
+        <link rel="stylesheet" href="../CSS/style.css">
     </head>
-    <body style="background-color: rgb(11, 86, 130);">
+    <body>
         <nav>
-            <div><a href="/memes.html">Enculator</a></div>
-            <div><a href="/memes.html">Memes</a></div>
-            <div><a href="/">Note</a></div>
+            <div><a href="memes.html">Enculator</a></div>
+            <div><a href="memes.html">Memes</a></div>
+            <div><a href="index.html">Note</a></div>
         </nav>
         <div class="page">
             <h1>Uhhh Apple Pen !</h1>
