--- a/memes.html
+++ b/memes.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <title>Enculator</title>
-        <link rel="stylesheet" href="/CSS/style.css">
+        <link rel="stylesheet" href="../CSS/style.css">
 
     </head>
     <body>
         <nav>
-            <div><a href="/memes.html">Enculator</a></div>
-            <div><a href="/memes.html">Memes</a></div>
-            <div><a href="/">Note</a></div>
+            <div><a href="memes.html">Enculator</a></div>
+            <div><a href="memes.html">Memes</a></div>
+            <div><a href="index.html">Note</a></div>
         </nav>
         <div class="page">
             <div class="grid">
