--- a/meme/air.html
+++ b/meme/air.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <title>Enculator</title>
-        <link rel="stylesheet" href="../CSS/style.css">
+        <link rel="stylesheet" href="/CSS/style.css">
     </head>
     <body>
         <nav>
-            <div><a href="memes.html">Enculator</a></div>
-            <div><a href="memes.html">Memes</a></div>
-            <div><a href="index.html">Note</a></div>
+            <div><a href="/memes.html">Enculator</a></div>
+            <div><a href="/memes.html">Memes</a></div>
+            <div><a href="/index.html">Note</a></div>
         </nav>
         <div style="height: calc(100vh - 106px);" class="page">    
             <h1>Oh un courrent d'air !</h1>
