--- a/meme/orange.html
+++ b/meme/orange.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <nav>
-            <div><a href="memes.html">Enculator</a></div>
-            <div><a href="memes.html">Memes</a></div>
-            <div><a href="index.html">Note</a></div>
+            <div><a href="../memes.html">Enculator</a></div>
+            <div><a href="../memes.html">Memes</a></div>
+            <div><a href="../index.html">Note</a></div>
         </nav>
         <div style="height: calc(100vh - 106px);" class="page">    
             <h1>Petite pensée pour toutes les orange de la cantine</h1>
