--- a/meme/pen.html
+++ b/meme/pen.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <nav>
-            <div><a href="memes.html">Enculator</a></div>
-            <div><a href="memes.html">Memes</a></div>
-            <div><a href="index.html">Note</a></div>
+            <div><a href="../memes.html">Enculator</a></div>
+            <div><a href="../memes.html">Memes</a></div>
+            <div><a href="../index.html">Note</a></div>
         </nav>
         <div class="page">
             <h1>Uhhh Apple Pen !</h1>
