--- a/meme/weed.html
+++ b/meme/weed.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <nav>
-            <div><a href="memes.html">Enculator</a></div>
-            <div><a href="memes.html">Memes</a></div>
-            <div><a href="index.html">Note</a></div>
+            <div><a href="../memes.html">Enculator</a></div>
+            <div><a href="../memes.html">Memes</a></div>
+            <div><a href="../index.html">Note</a></div>
         </nav>
         <div style="height: fit-content;" class="page">
             <h1>On lave les carreau de Ninon</h1>
