--- a/meme/pen.html
+++ b/meme/pen.html
@@ -10,7 +10,7 @@
             <div><a href="../memes.html">Memes</a></div>
             <div><a href="../index.html">Note</a></div>
         </nav>
-        <div class="page">
+        <div style="height: fit-content;" class="page">
             <h1>Uhhh Apple Pen !</h1>
             <iframe width="100%" height="687" src="https://www.youtube.com/embed/Ct6BUPvE2sM" title="PIKOTARO - PPAP (Pen Pineapple Apple Pen) (Long Version) (Official Video) [Ultra Records]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
