--- a/meme/orange.html
+++ b/meme/orange.html
@@ -11,7 +11,7 @@
             <div><a href="../index.html">Note</a></div>
         </nav>
         <div style="height: calc(100vh - 212px);" class="page">    
-            <h1>Petite pensée pour toutes les orange de la cantine</h1>
+            <h1>Petite pensée pour toutes les oranges de la cantine</h1>
             <img width="100%" src="/IMG/orange.png" alt="Rue du lieu du crime d'orange">
             <h2>Lieu du crime</h2>
         </div>
