--- a/meme/trump.html
+++ b/meme/trump.html
@@ -12,7 +12,7 @@
         </nav>
         <div style="height: calc(100vh - 212px);" class="page">    
             <h1>Oh non tu t'es Trumpé, Il n'y a qu'une image d'un Trumpoline qui est tout Trumpé</h1>
-            <img width="100%" src="/IMG/trumpoline.webp">
+            <img width="100%" src="../IMG/trumpoline.webp">
         </div>
     </div>
   </body>
