--- a/meme/air.html
+++ b/meme/air.html
@@ -12,7 +12,7 @@
         </nav>
         <div style="height: calc(100vh - 212px);" class="page">    
             <h1>Oh un courrent d'air !</h1>
-            <img width="100%" src="/IMG/cdi.jpeg">
+            <img width="100%" src="../IMG/cdi.jpeg">
         </div>
     </div>
   </body>
