--- a/meme/caprisun.html
+++ b/meme/caprisun.html
@@ -12,7 +12,7 @@
         </nav>
         <div style="height: calc(100vh - 212px);" class="page">    
             <h1>A toutes nos heures passée à attendre le bus et a exploser des capri-sun</h1>
-            <img width="100%" src="/IMG/bus.png" alt="Arret de bus">
+            <img width="100%" src="../IMG/bus.png" alt="Arret de bus">
         </div>
     </div>
   </body>
