--- a/meme/spanish.html
+++ b/meme/spanish.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <nav>
-            <div><a href="../memes.html">Enculator</a></div>
+            <div><a href="../memes.html">Enculator 2000</a></div>
             <div><a href="../index.html">Note</a></div>
         </nav>
         <div style="height: fit-content;" class="page">
