--- a/meme/air.html
+++ b/meme/air.html
@@ -4,7 +4,7 @@
         <title>Enculator</title>
         <link rel="stylesheet" href="../CSS/style.css">
     </head>
-    <body>
+    <body style="background-color: white;">
         <nav>
             <div><a href="../memes.html">Enculator 2000</a></div>
             <div><a href="../index.html">Note</a></div>
