--- a/memes.html
+++ b/memes.html
@@ -30,13 +30,13 @@
                 <a  href="meme/orange.html" style="background-color: yellow;">
                     <img src="https://img.icons8.com/fluency/240/null/orange.png"/>
                 </a>
-                <a  href="meme/caprisun.html" style="background-color: yellow;">
+                <a  href="meme/caprisun.html" style="background-color: rgb(0, 255, 164);">
                     <img src="https://img.icons8.com/fluency/240/null/orange-juice.png"/>
                 </a>
-                <a  href="meme/pizza.html" style="background-color: yellow;">
+                <a  href="meme/pizza.html" style="background-color: rgb(3, 255, 0);">
                     <img src="https://img.icons8.com/fluency/240/null/pizza.png"/>
                 </a>
-                <a  href="meme/spanish.html" style="background-color: yellow;">
+                <a  href="meme/spanish.html" style="background-color: rgb(255, 127, 0);">
                     <img src="https://img.icons8.com/fluency/240/null/spain-circular.png"/>
                 </a>
 
