--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h2>
                 Je te présente Enculator 2000 un site rien que pour toi de tout nos delires du collège. Amuse toi bien.
             </h2>
-
+            <img src="IMG/bday.png" alt="Party Memoji">
     </div>
   </body>
 </html>
