--- a/meme/beladj.html
+++ b/meme/beladj.html
@@ -4,7 +4,7 @@
         <title>Enculator</title>
         <link rel="stylesheet" href="../CSS/style.css">
     </head>
-    <body style="background-color: rgb(75, 237, 225)">
+    <body>
         <nav>
             <div><a href="../memes.html">Enculator 2000</a></div>
 
